# sir-rs

./: .gitignore  Cargo.toml  README.md  test.bat  test.sh
.github/workflows/: ci.yaml
src/: config.rs  main.rs  sir.rs
