[package]
name = "sir-rs"
version = "0.1.0"
authors = ["Bradley Bonitatibus <bradbonitatibus@gmail.com>"]
license = "Apache-2.0"
edition = "2018"
readme = "README.md"
keywords = ["compartmental", "epidemiology", "sir"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
serde = {version = "1.0.116", features=["derive"]}