[package]
authors = ["Bradley Bonitatibus <bradbonitatibus@gmail.com>"]
edition = "2018"
keywords = ["compartmental", "modelling", "epidemiology", "sir"]
license = "Apache-2.0"
name = "sir-rs"
readme = "README.md"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
